<resources>
    <string name="app_name">Tip Time</string>
    <string name="service_cost">Cost of Service</string>
    <string name="how_the_service">How was the service?</string>
    <string name="good">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_text">TAKE YOUR TIME… </string>
    <string name="head_title_news">Current Events</string>
    <string name="news_clickable">News</string>
    <string name="title" translatable="false"><![CDATA[manicure & pedicure parlor]]></string>
    <string name="reserve">Reserve</string>
    <string name="tip_time">Tip Time</string>
    <string name="news">News &amp; Current Events</string>
    <string name="News">News</string>
    <string name="change_language" translatable="false">change language</string>
    <string name="todo">TODO</string>
    <string name="News_title">TITLE</string>
    <string name="news_source">Source</string>
    <string name="news_description">Description</string>
    <string name="published_at">Published At</string>
    <string name="news_content">Content</string>

</resources>